--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,5 @@
 ## [v1.2.0] - 2024-16-05
 ### Changed
-- **Print_SO_ARM100_05c - Moving_Jaw_04e-1**: Updated the servo attachment faces to retain parts during assembly.
+- **Print_SO_ARM100_05c - Moving_Jaw_04f-1**: Updated the servo attachment faces to retain parts during assembly.
 - **Print_SO_ARM100_05c - Removable_Jaws_01e-1**: Clearances added to allow attachment lateral freedom at the end of the jaws - i.e. they can be screwed in the middle or to the sides.
 - **Print_SO_ARM100_05c - Wrist_Roll_Pitch_04c-1**: Updated the servo attachment faces to retain parts during assembly.
