align images to middle

--- a/SO100.md
+++ b/SO100.md
@@ -1,12 +1,13 @@
-<h1 align="center">Standard Open SO-100 Arm</h1>
+<div align="center">
 
-
-<div style="display: flex; gap: 1rem; justify-content: center; align-items: center;" >
-    <img src="media/Leader_And_Follower_SO100.jpg" alt="SO-101 follower arm" title="SO-101 follower arm" style="width: 70%;"/>
+   <h1>Standard Open SO-100 Arm</h1>
+   <div style="display: flex; gap: 1rem; justify-content: center; align-items: center;" >
+      <img src="media/Leader_And_Follower_SO100.jpg" alt="SO-101 follower arm" title="SO-101 follower arm" style="width: 70%;"/>
 </div>
 <br><br>
 
 The SO-100 arm is the original robot arm designed by the [RobotStudio](https://www.therobotstudio.com) in collaboration with [Hugging Face](https://huggingface.co/lerobot).
+</div>
 
 ## Sourcing Parts
 
