--- a/SO100.md
+++ b/SO100.md
@@ -83,7 +83,7 @@ A variety of 3D printers are acceptable to print the parts necessary of the foll
       2. [Leader](/stl_files_for_3dprinting/Leader/Print_Leader_Bambu_P1P.3mf)
 
 5. Take Down
-   1. After the print is done, use a putty knife to scrape the the parts off the print bed.
+   1. After the print is done, use a putty knife to scrape the parts off the print bed.
    2. Remove any support material from parts.
 
 ### Don't Own a 3D printer?
