fix: update lerobot doc links

--- a/SO100.md
+++ b/SO100.md
@@ -91,7 +91,7 @@ Go here: [Printing services](./3DPRINT.md)
 
 ## Assembly tutorial, data collection and AI training
 
-Follow the [complete guide of LeRobot](https://github.com/huggingface/lerobot/blob/main/examples/10_use_so100.md).
+Follow the [complete guide of LeRobot](https://huggingface.co/docs/lerobot/so100).
 
 It points to [our video tutorial](https://www.youtube.com/watch?v=FioA2oeFZ5I&ab_channel=HuggingFace).
 Note: we removed to auto-calibration at the end in favor of manual calibration which is more robust.
