--- a/Mini/readme
+++ b/Mini/readme
@@ -1,5 +1,5 @@
 This is an experiment in printing the entire SO-Arm as a single piece that can then articulate once the supports are removed.
-The clearances are only 0.2mm between all parts which has proven to be ok in test pieces, but I find hard to believe will work on the whole thing.
-I shall know by tomorrow morning whether it will move after printing on a Bambu A1, with a 0.4mm brass nozzle, 0.2mm layer thickness with supports above 30 degrees in light green PLA+ made by *INSERT MANUFACTURER'S NAME HERE. YOU NEED TO INCLUDE THIS.*.
-The colour and manufacturer of PLA effects the end result. This is due to differences in both pigments and addatives that filament manufacturers add to their filaments, especially when it comes to materials that are advertised as being PLA+. Even though they're advertised as PLA+, PLA+ made by different manufacturer's can be completely different due to these largely proprietary addative blends. Some PLA+ targets stronger materials while others target better bed adhesion.
+The clearances are only 0.2mm between all parts which has proven to be ok in test pieces, but I find it hard to believe it will work on the whole thing.
+I shall know by tomorrow morning whether it will move after printing on a Bambu A1, with a 0.4mm brass nozzle, 0.2mm layer thickness with supports above 30 degrees in light green PLA+ made by *Please Insert Filament Manufacturer Name Here*.
+The colour and manufacturer of PLA effects the end result. This is due to differences in both pigments and additives that filament manufacturers add to their filaments, especially when it comes to materials that are advertised as being PLA+. Even though they're advertised as PLA+, PLA+ made by different manufacturers can be completely different due to these largely proprietary additive blends. Some PLA+ targets stronger materials while others target better bed adhesion.
 I'd welcome any feedback on different machines and settings and whether the finished print can be made to move freely with the present clearance between parts.
